# quafing

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prospector.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  Quafing_replicate_FINE.ipynb  README.dev.md  README.md  environment.yml  next_steps.md  preprocessing.py  project_setup.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  lint.yml  test.yaml
docs/: Makefile  conf.py  index.rst  make.bat
example_scripts/simulate_data/: reproduce-figure-2.py  reproduce-figure-3.py
fine/: data_sim_module.py  fine.py  simdata_sample.py  simulate_data.py
fine_py3/: fine_py3.py  simulate_data_py3.py
legacy/: simulate_data.py
legacy/scripts/HarShemesh-2020/: reproduce-figure-2.py  reproduce-figure-3.py  spherical.py
notebooks/: Quafing_replicate_FINE.ipynb
quafing/: __init__.py  my_module.py  preprocessing.py
quafing/data_simulation/: data_sim_module.py
quafing/density/: __init__.py  base_density_estimators.py  discrete_1d_estimator.py  estimate_density.py
quafing/discretization/: __init__.py  base_discretizer.py  bayesian_blocks_discretizer.py  discretize.py
quafing/distance/: __init__.py  base_distance.py  cosine_distance.py  hellinger_distance.py  information_distance.py  kl_divergence_distance.py
quafing/embedding/: __init__.py  base_embedder.py  embed.py  mds_embedder.py
quafing/io/: __init__.py  base_io_handler.py  excel_handler.py  export.py  load.py
quafing/multipdf/: __init__.py  factorized_multi_dimensional_pdf.py  multi_dimensional_pdf.py  multipdf.py  multipdf_collection.py
quafing/tests/: test_density.py  test_discretizer.py  test_distance.py  test_io.py  test_multipdf.py  test_multipdf_collection.py  test_preprocessing.py
quafing/tests/test_data/: test_wrong.xlsx
scripts/: README.md  hypersphere.py  reproduce-figure-2.py  reproduce-figure-3.py
scripts/HarShemesh-2020/: README.md  helpers.py  hypersphere.py  reproduce-figure-2.py
tests/: test_density.py  test_distance.py  test_embedding.py  test_fine.py  test_my_module.py  test_preprocessing.py
tests/test_data/: test_data.abc
