[metadata]
description_file = README.md

[options]
packages = find:
install_requires =

[options.extras_require]
dev =
    pre-commit
    black
    coverage[toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov

[coverage:run]
branch = True
source = fine

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
